<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FigurasGeometricas</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="texto">Selecciona que figura quieres dibujar:</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="circulo">Circulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="radio">Radio:</string>
    <string name="area">El área es:</string>
    <string name="calcula">Calcula el área</string>

</resources>