
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto" />

        <Button
            android:id="@+id/btnRect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rectangulo" />

        <Button
            android:id="@+id/btnCirc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circulo" />

        <Button
            android:id="@+id/btnTri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangulo" />

    </TableLayout>
