<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/textoCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio" />

    <EditText
        android:id="@+id/radioCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area" />

    <Button
        android:id="@+id/btnCalcularCirc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcula" />

</TableLayout>